fixed bottom white space

--- a/assets/css/ror.css
+++ b/assets/css/ror.css
@@ -16,7 +16,7 @@ html, body {
 
 .main-content-wrapper {
   background-color: var(--darkBlue);
-  height: 95vh;
+  height: 100vh;
 }
 
 .item-img {
@@ -46,11 +46,6 @@ html, body {
   }
 }
 
-@media (min-height: 912px) {
-  .main-content-wrapper {
-    height: 85vh;
-  }
-}
 
 
 
